Add unordered list: About Me, Skills, Portfolio, Contact after main heading

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>CodeSpace Cat's Portfolio &#127912</h1>
-    
+    <ul>
+        <li>About Me &#128075</li>
+        <li>Skills &#128296</li>
+        <li>Portfolio &#128248</li>
+        <li>Contact &#129305</li>
+    </ul>
 </body>
 </html>
