--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
         <li>Portfolio &#128248</li>
         <li>Contact &#129305</li>
     </ul>
+    <h2>About Me &#128049</h2>
+    <img src="images/cat-codespace.png" alt="CodeSpace cat logo">
+    <p>Hello! <strong>I'm CodeSpace cat.</strong> I'm purr-ssionate about web development and design.
+    I've been pawing at the web industry for just one catnap (that's less than a day in human terms), 
+    and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experiences. 
+    Whoa, that's a lot of puns. &#128062</p>
 </body>
 </html>
