--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
     I've been pawing at the web industry for just one catnap (that's less than a day in human terms), 
     and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experiences. 
     Whoa, that's a lot of puns. &#128062</p>
+    <h2>My Skills 🤹</h2>
+    <ul>
+        <li>Web Development 🕸️</li>
+        <li>UI/UX Design 🎨</li>
+        <li>Backend Development 🧱</li>
+        <li>Database Management 💻</li>
+        <li>SEO Optimization 🔎</li>
+        <li>Lying in the sun 🌞</li>
+    </ul>
 </body>
 </html>
