Remove decimal used from W3Schools for emojis and used Emoji Snippets extension in VSCode

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>Cat Portfolio</title>
 </head>
 <body>
-    <h1>CodeSpace Cat's Portfolio &#127912</h1>
+    <h1>CodeSpace Cat's Portfolio 🎨</h1>
     <ul>
-        <li>About Me &#128075</li>
-        <li>Skills &#128296</li>
-        <li>Portfolio &#128248</li>
-        <li>Contact &#129305</li>
+        <li>About Me 👋</li>
+        <li>Skills ⚒️</li>
+        <li>Portfolio 📸</li>
+        <li>Contact 🤙</li>
     </ul>
-    <h2>About Me &#128049</h2>
+    <h2>About Me 🐱</h2>
     <img src="images/cat-codespace.png" alt="CodeSpace cat logo">
     <p>Hello! <strong>I'm CodeSpace cat.</strong> I'm purr-ssionate about web development and design.
     I've been pawing at the web industry for just one catnap (that's less than a day in human terms), 
     and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experiences. 
-    Whoa, that's a lot of puns. &#128062</p>
-    <h2>My Skills 🤹</h2>
+    Whoa, that's a lot of puns. 🐾</p>
+    <h2>My Skills 🤹‍♂️</h2>
     <ul>
         <li>Web Development 🕸️</li>
         <li>UI/UX Design 🎨</li>
@@ -28,5 +28,7 @@
         <li>SEO Optimization 🔎</li>
         <li>Lying in the sun 🌞</li>
     </ul>
+    <h2>Catfolio</h2>
+
 </body>
 </html>
