Add Contact Me section with a form, text input and submit button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
             <th>Date</th>
             <th>Description</th>
             <th>Thumbnail</th>
-        
         </tr>
         <tr>
             <td>Perfect Landing Page</td>
@@ -55,8 +54,17 @@
             <td>A social media site for cats to meow and hiss!</td>
             <td> <img src="images/3.png"> </td>
         </tr>
-
     </table>
+    <h2>Contact Me</h2>
+    <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name">
+        <label for="email">Email:</label>
+        <input type="text" id="email">
+        <label for="message">Message:</label>
+        <textarea rows="2" cols="20" id="message"></textarea>
+        <button>Submit</button>
+    </form>
 
 </body>
 </html>
