Add copyright section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
         <textarea rows="2" cols="20" id="message"></textarea>
         <button>Submit</button>
     </form>
-
+    <p>&copy; 2024 CodeSpace Cat. All rights reserved.</p>
 </body>
 </html>
