--- a/index.html
+++ b/index.html
@@ -7,64 +7,74 @@
 </head>
 <body>
     <h1>CodeSpace Cat's Portfolio 🎨</h1>
-    <ul>
-        <li>About Me 👋</li>
-        <li>Skills ⚒️</li>
-        <li>Portfolio 📸</li>
-        <li>Contact 🤙</li>
-    </ul>
-    <h2>About Me 🐱</h2>
-    <img src="images/cat-codespace.png" alt="CodeSpace cat logo">
-    <p>Hello! <strong>I'm CodeSpace cat.</strong> I'm purr-ssionate about web development and design.
-    I've been pawing at the web industry for just one catnap (that's less than a day in human terms), 
-    and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experiences. 
-    Whoa, that's a lot of puns. 🐾</p>
-    <h2>My Skills 🤹‍♂️</h2>
-    <ul>
-        <li>Web Development 🕸️</li>
-        <li>UI/UX Design 🎨</li>
-        <li>Backend Development 🧱</li>
-        <li>Database Management 💻</li>
-        <li>SEO Optimization 🔎</li>
-        <li>Lying in the sun 🌞</li>
-    </ul>
-    <h2>Catfolio</h2>
-    <table>
-        <tr>
-            <th>Project Name</th>
-            <th>Date</th>
-            <th>Description</th>
-            <th>Thumbnail</th>
-        </tr>
-        <tr>
-            <td>Perfect Landing Page</td>
-            <td>January 2024</td>
-            <td>A delightful landing page for a luxury cat condo</td>
-            <td> <img src="images/1.png"> </td>
-        </tr>
-        <tr>
-            <td>Kitty Commerce</td>
-            <td>February 2024</td>
-            <td>An online store selling the fanciest catnip toys.</td>
-            <td> <img src="images/2.png"> </td>
-        </tr>
-        <tr>
-            <td>CatChat Social</td>
-            <td>June 2024</td>
-            <td>A social media site for cats to meow and hiss!</td>
-            <td> <img src="images/3.png"> </td>
-        </tr>
-    </table>
-    <h2>Contact Me</h2>
-    <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name">
-        <label for="email">Email:</label>
-        <input type="text" id="email">
-        <label for="message">Message:</label>
-        <textarea rows="2" cols="20" id="message"></textarea>
-        <button>Submit</button>
-    </form>
-    <p>&copy; 2024 CodeSpace Cat. All rights reserved.</p>
+    <nav>
+        <ul>
+            <a href="#about"><li>About Me 👋</li></a>
+            <a href="#skills"><li>Skills ⚒️</li></a>
+            <a href="#portfolio"><li>Portfolio 📸</li></a>
+            <a href="#contact"><li>Contact 🤙</li></a>
+        </ul>
+    </nav>
+    <section id="about">
+        <h2>About Me 🐱</h2>
+        <img src="images/cat-codespace.png" alt="CodeSpace cat logo">
+        <p>Hello! <strong>I'm CodeSpace cat.</strong> I'm purr-ssionate about web development and design.
+        I've been pawing at the web industry for just one catnap (that's less than a day in human terms), 
+        and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experiences. 
+        Whoa, that's a lot of puns. 🐾</p>
+    </section>
+    <section id="skills">
+        <h2>My Skills 🤹‍♂️</h2>
+        <ul>
+            <li>Web Development 🕸️</li>
+            <li>UI/UX Design 🎨</li>
+            <li>Backend Development 🧱</li>
+            <li>Database Management 💻</li>
+            <li>SEO Optimization 🔎</li>
+            <li>Lying in the sun 🌞</li>
+        </ul>
+    </section>
+    <section id="portfolio">
+        <h2>Catfolio</h2>
+        <table>
+            <tr>
+                <th>Project Name</th>
+                <th>Date</th>
+                <th>Description</th>
+                <th>Thumbnail</th>
+            </tr>
+            <tr>
+                <td>Perfect Landing Page</td>
+                <td>January 2024</td>
+                <td>A delightful landing page for a luxury cat condo</td>
+                <td> <img src="images/1.png"> </td>
+            </tr>
+            <tr>
+                <td>Kitty Commerce</td>
+                <td>February 2024</td>
+                <td>An online store selling the fanciest catnip toys.</td>
+                <td> <img src="images/2.png"> </td>
+            </tr>
+            <tr>
+                <td>CatChat Social</td>
+                <td>June 2024</td>
+                <td>A social media site for cats to meow and hiss!</td>
+                <td> <img src="images/3.png"> </td>
+            </tr>
+        </table>
+    </section>
+    <footer id="contact">
+        <h2>Contact Me</h2>
+        <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name">
+            <label for="email">Email:</label>
+            <input type="text" id="email">
+            <label for="message">Message:</label>
+            <textarea rows="2" cols="20" id="message"></textarea>
+            <input type="submit" value="Submit">
+        </form>
+        <p>&copy; 2024 CodeSpace Cat. All rights reserved.</p>
+    </footer>  
 </body>
 </html>
