--- a/index.html
+++ b/index.html
@@ -6,63 +6,69 @@
     <title>Cat Portfolio</title>
 </head>
 <body>
-    <h1>CodeSpace Cat's Portfolio 🎨</h1>
-    <nav>
-        <ul>
-            <a href="#about"><li>About Me 👋</li></a>
-            <a href="#skills"><li>Skills ⚒️</li></a>
-            <a href="#portfolio"><li>Portfolio 📸</li></a>
-            <a href="#contact"><li>Contact 🤙</li></a>
-        </ul>
-    </nav>
-    <section id="about">
-        <h2>About Me 🐱</h2>
-        <img src="images/cat-codespace.png" alt="CodeSpace cat logo">
-        <p>Hello! <strong>I'm CodeSpace cat.</strong> I'm purr-ssionate about web development and design.
-        I've been pawing at the web industry for just one catnap (that's less than a day in human terms), 
-        and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experiences. 
-        Whoa, that's a lot of puns. 🐾</p>
-    </section>
-    <section id="skills">
-        <h2>My Skills 🤹‍♂️</h2>
-        <ul>
-            <li>Web Development 🕸️</li>
-            <li>UI/UX Design 🎨</li>
-            <li>Backend Development 🧱</li>
-            <li>Database Management 💻</li>
-            <li>SEO Optimization 🔎</li>
-            <li>Lying in the sun 🌞</li>
-        </ul>
-    </section>
-    <section id="portfolio">
-        <h2>Catfolio</h2>
-        <table>
-            <tr>
-                <th>Project Name</th>
-                <th>Date</th>
-                <th>Description</th>
-                <th>Thumbnail</th>
-            </tr>
-            <tr>
-                <td>Perfect Landing Page</td>
-                <td>January 2024</td>
-                <td>A delightful landing page for a luxury cat condo</td>
-                <td> <img src="images/1.png"> </td>
-            </tr>
-            <tr>
-                <td>Kitty Commerce</td>
-                <td>February 2024</td>
-                <td>An online store selling the fanciest catnip toys.</td>
-                <td> <img src="images/2.png"> </td>
-            </tr>
-            <tr>
-                <td>CatChat Social</td>
-                <td>June 2024</td>
-                <td>A social media site for cats to meow and hiss!</td>
-                <td> <img src="images/3.png"> </td>
-            </tr>
-        </table>
-    </section>
+    <header>
+        <h1>CodeSpace Cat's Portfolio 🎨</h1>
+        <nav>
+            <ul>
+                <a href="#about"><li>About Me 👋</li></a>
+                <a href="#skills"><li>Skills ⚒️</li></a>
+                <a href="#portfolio"><li>Portfolio 📸</li></a>
+                <a href="#contact"><li>Contact 🤙</li></a>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="about">
+            <h2>About Me 🐱</h2>
+            <img src="images/cat-codespace.png" alt="CodeSpace cat logo">
+            <p>
+                Hello! <strong>I'm CodeSpace cat.</strong> I'm purr-ssionate about web development and design.
+                I've been pawing at the web industry for just one catnap (that's less than a day in human terms), 
+                and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experiences. 
+                Whoa, that's a lot of puns. 🐾
+            </p>
+        </section>
+        <section id="skills">
+            <h2>My Skills 🤹‍♂️</h2>
+            <ul>
+                <li>Web Development 🕸️</li>
+                <li>UI/UX Design 🎨</li>
+                <li>Backend Development 🧱</li>
+                <li>Database Management 💻</li>
+                <li>SEO Optimization 🔎</li>
+                <li>Lying in the sun 🌞</li>
+            </ul>
+        </section>
+        <section id="portfolio">
+            <h2>Catfolio</h2>
+            <table>
+                <tr>
+                    <th>Project Name</th>
+                    <th>Date</th>
+                    <th>Description</th>
+                    <th>Thumbnail</th>
+                </tr>
+                <tr>
+                    <td>Perfect Landing Page</td>
+                    <td>January 2024</td>
+                    <td>A delightful landing page for a luxury cat condo</td>
+                    <td> <img src="images/1.png"> </td>
+                </tr>
+                <tr>
+                    <td>Kitty Commerce</td>
+                    <td>February 2024</td>
+                    <td>An online store selling the fanciest catnip toys.</td>
+                    <td> <img src="images/2.png"> </td>
+                </tr>
+                <tr>
+                    <td>CatChat Social</td>
+                    <td>June 2024</td>
+                    <td>A social media site for cats to meow and hiss!</td>
+                    <td> <img src="images/3.png"> </td>
+                </tr>
+            </table>
+        </section>
+    </main>
     <footer id="contact">
         <h2>Contact Me</h2>
         <form>
