--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     <th>Thumbnail</th>
                 </tr>
                 <tr>
-                    <td>Perfect Landing Page</td>
+                    <td>Purrfect Landing Page</td>
                     <td>January 2024</td>
-                    <td>A delightful landing page for a luxury cat condo</td>
+                    <td>A delightful landing page for a luxury cat condo.</td>
                     <td> <img src="images/1.png"> </td>
                 </tr>
                 <tr>
